@@ -1359,7 +1359,7 @@ HWLOC_DECLSPEC int hwloc_get_proc_last_cpu_location(hwloc_topology_t topology, h
 typedef enum {
   /** \brief Reset the memory allocation policy to the system default.
    * Depending on the operating system, this may correspond to
-   * ::HWLOC_MEMBIND_FIRSTTOUCH (Linux),
+   * ::HWLOC_MEMBIND_FIRSTTOUCH (Linux, FreeBSD),
    * or ::HWLOC_MEMBIND_BIND (AIX, HP-UX, Solaris, Windows).
    * This policy is never returned by get membind functions.
    * The nodeset argument is ignored.
