@@ -8,6 +8,7 @@
 #define HWLOC_PORT_FREEBSD_SYS_SYSCTL_H
 
 extern int sysctl(int *name, int name_len, void *oldp, size_t *oldlenp, void *newp, size_t newlen);
+extern int sysctlbyname(const char *name, void *oldp, size_t *oldlenp, const void *newp, size_t newlen);
 
 #define CTL_HW 6
 #define HW_PHYSMEM 5
